gcc: 17f0f5acdcfb9181203ca9b6d8f8cbc64e5ce843 (2016-11-30)

--- a/hurd/translator/procfs/jkoenig/discussion.mdwn
+++ b/hurd/translator/procfs/jkoenig/discussion.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2010, 2011, 2012, 2013, 2014 Free Software
+[[!meta copyright="Copyright © 2010, 2011, 2012, 2013, 2014, 2016 Free Software
 Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -332,7 +332,6 @@ Needed by glibc's `pldd` tool (commit
 
 [[!message-id "alpine.LFD.2.02.1110111111260.2016@akari"]].  Needed by glibc's
 `stdlib/tst-secure-getenv.c`.
-`HAVE_PROC_SELF_EXE` in `[GCC]/libjava/configure.ac`.
 Also used in `[GCC]/libgfortran/runtime/main.c`:`store_exe_path`.
 
 Is it generally possible to use something like the following instead?
@@ -462,7 +461,6 @@ This is used in `[LLVM]/lib/Support/Unix/Path.inc`.
 
 ## `/proc/self/maps`
 
-`HAVE_PROC_SELF_MAPS` in `[GCC]/libjava/configure.ac`.
 Also used in `[GCC]/intl/relocatable.c`:`find_shared_library_fullname` for
 `#ifdef __linux__`.
 
