--- a/open_issues/gnat.mdwn
+++ b/open_issues/gnat.mdwn
@@ -120,7 +120,9 @@ bigger Ada code bases, or any Ada testsuites.
 
 [[!message-id "1456875776.5852.194.camel@gmail.com"]].
 GCC trunk r234252.
-Still incomplete.
+`gcc/ada/s-osinte-gnu.adb`: r235467 (on trunk)/r235468 (on gcc-6-branch).
+`getpagesize` patch: r235896 (on trunk)/r235897 (on gcc-6-branch).
+Still incomplete?  (Changes to generic files?)
 
 
 ## `getcontext`/`makecontext`/`setcontext`/`swapcontext` usage analysis
