--- a/user/jkoenig/java.mdwn
+++ b/user/jkoenig/java.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2011, 2013, 2014 Free Software Foundation,
+[[!meta copyright="Copyright © 2011, 2013, 2014, 2016 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -484,13 +484,7 @@ Might get back to these as time/interest permits.
 
 ### GCJ
 
-  * [[tschwinge]] has the feeling that Java in GCC (that is, GCJ) is mostly
-    dead?  (True?)
-
-  * Thus perhaps not too much effort should be spent with it.
-
-    If the POSIX threads signal semantics makes it going, then great, otherwise
-    we should get a feeling what else is missing.
+  * Java in GCC (that is, GCJ) has been removed in GCC 7.
 
 
 ### Joe-E.
