--- a/donate.mdwn
+++ b/donate.mdwn
@@ -94,7 +94,7 @@ Continue to explore the [[list of open bounties|tag/bounty]].
 # Hurd Developer Meetings
 
 Another possibility is to meet with the Hurd developers at a
-[[meeting|community/meetings]] and spend them a pizza or beer or both or
+[[meeting|community/meetings]] and send them a pizza or beer or both or
 similar.
 
 
