gcc: Enable Ada testing

--- a/open_issues/gcc.mdwn
+++ b/open_issues/gcc.mdwn
@@ -479,9 +479,10 @@ Last reviewed up to the Git mirror's commit
             0 0x102c000
             0 0x102e000
 
-  * `gcc/ada` (not all reviewed)
+  * `gcc/ada`, `gcc/testsuite/ada`, `gcc/testsuite/gnat.dg`, `gnattools`,
+    `libada` (not all reviewed)
 
-      * [[Ada (GNAT)|gnat]] support is work in progress.
+    See [[Ada (GNAT)|gnat]].
 
   * `gcc/go`, `gcc/testsuite/go.test`, `libgo` (not reviewed)
 
@@ -992,13 +993,14 @@ Last reviewed up to the Git mirror's commit
 
 Here's a log of a GCC build run; this is from Git commit
 17f0f5acdcfb9181203ca9b6d8f8cbc64e5ce843 (2016-11-30),
+plus *GNU Hurd Ada fixes*,
 plus *libstdc++ RLIMIT changes* ([[!message-id
 "8760n66mky.fsf@euler.schwinge.homeip.net"]]), run on kepler.SCHWINGE
 and laplace.SCHWINGE.
 
     $ export LC_ALL=C
     $ (cd ../master/ && contrib/gcc_update --touch)
-    $ ../master/configure --prefix="$PWD".install SHELL=/bin/dash CC=gcc-6 CXX=g++-6 --enable-languages=all --disable-libcilkrts --disable-libsanitizer --disable-libvtv --disable-libmpx --with-native-system-header-dir=/usr/include --enable-multiarch 2>&1 | tee log_build
+    $ ../master/configure --prefix="$PWD".install SHELL=/bin/dash CC=gcc-6 CXX=g++-6 --enable-languages=all,ada --disable-libcilkrts --disable-libsanitizer --disable-libvtv --disable-libmpx --with-native-system-header-dir=/usr/include --enable-multiarch 2>&1 | tee log_build
     [...]
     $ make 2>&1 | tee log_build_
     [...]
@@ -1014,8 +1016,8 @@ until these is auto-detected/fixed/ported for GNU Hurd.
 `/include` for GNU Hurd.  Explicit `--enable-multiarch` because *auto check [is
 disabled if] configured with --native-system-header-dir*.
 
-This takes up around 3.9 GiB, and runs for [[3 h 57 min|performance#measure]]
-on kepler.SCHWINGE and [[4 h 37 min|performance#measure]] on laplace.SCHWINGE.
+This takes up around 4.6 GiB, and runs for [[5 h 16 min|performance#measure]]
+on kepler.SCHWINGE and [[5 h 14 min|performance#measure]] on laplace.SCHWINGE.
 
 <!--
 
@@ -1132,8 +1134,8 @@ on kepler.SCHWINGE and [[4 h 37 min|performance#measure]] on laplace.SCHWINGE.
     $ make install 2>&1 | tee log_install
     [...]
 
-This takes up around 0.9 GiB, and runs for [[1 min|performance#measure]] on
-kepler.SCHWINGE and [[3 min|performance#measure]] on laplace.SCHWINGE.
+This takes up around 1.3 GiB, and runs for [[1 min|performance#measure]] on
+kepler.SCHWINGE and [[5 min|performance#measure]] on laplace.SCHWINGE.
 
 
 ## Analysis
@@ -1152,8 +1154,8 @@ kepler.SCHWINGE and [[3 min|performance#measure]] on laplace.SCHWINGE.
     $ make -k check 2>&1 | tee log_test
     [...]
 
-This runs for [[5 h 43 min|performance#measure]] on kepler.SCHWINGE and [[12 h
-36 min|performance#measure]] on laplace.SCHWINGE.
+This runs for [[6 h 12 min|performance#measure]] on kepler.SCHWINGE and [[13 h
+34 min|performance#measure]] on laplace.SCHWINGE.
 
 
 ## Analysis
@@ -1446,9 +1448,6 @@ This runs for [[5 h 43 min|performance#measure]] on kepler.SCHWINGE and [[12 h
   * Timeout problems
 
     2015-11-03
-
-    With work-in-progress [[Ada (GNAT)|gnat]] support (but that's not relevant
-    here).
 
         splitting /home/thomas/tmp/gcc/hurd/master.build/gcc/testsuite/ada/acats/tests/cb/cb1010a.ada into:
            cb1010a.adb
